--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,12 @@
 {
     "compilerOptions": {
-        "target": "esnext",
-        "module": "commonjs",
-        "lib": ["es6"],
-        "allowJs": true,
-
-        "jsx": "react-native",
-        "declaration": true,
-
-        "outDir": "dist",
-
-        "removeComments": true,
-
-        "isolatedModules": true,
-
-        "strict": true,
-
-        "moduleResolution": "node",
-        "baseUrl": "./",
-
         "allowSyntheticDefaultImports": true,
-        "esModuleInterop": true
-    },
-    "exclude": ["node_modules", "dist", "Example"]
+        "jsx": "react-native",
+        "lib": ["dom", "esnext"],
+        "moduleResolution": "node",
+        "skipLibCheck": true,
+        "resolveJsonModule": true,
+        "strict": true,
+        "declaration": true
+    }
 }
